added npm, grunt and bower

--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-/* # Genesis Sample Child Theme  
-Theme Name: Genesis Sample Theme  
-Theme URI: http://my.studiopress.com/themes/genesis/  
-Description: This is the sample theme created for the Genesis Framework.   
-Author: StudioPress  
-Author URI: http://www.studiopress.com/  
+/*!
+Theme Name: Genesis Exoskeleton
+Description: This is a Genesis Child starter theme based on the sample theme created for the Genesis Framework.
+Author: Nate Finch, sridhar, studiopress
+Author URI: http://www.n8finch.com/
 Template: genesis  
 Template Version: 2.1.2  
 Tags: black, orange, white, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-menu, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready  
