--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ Theme Name: Inside Moves Theme
 Description: This is a Genesis Child starter theme based on the sample theme created for the Genesis Framework.
 Author: Nate Finch, sridhar, studiopress
 Author URI: http://www.n8finch.com/
-Template: genesis  
-Template Version: 2.1.2  
-Tags: black, orange, white, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-menu, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready  
-License: GPL-2.0+  
-License URI: http://www.gnu.org/licenses/gpl-2.0.html  
+Template: genesis
+Template Version: 2.1.2
+Tags: black, orange, white, one-column, two-columns, three-columns, left-sidebar, right-sidebar, responsive-layout, custom-menu, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready
+License: GPL-2.0+
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
 */
 
 /* # Table of Contents
@@ -313,6 +313,10 @@ body {
     font-weight: 300;
     line-height: 1.625;
     margin: 0;
+}
+
+body.custom-background {
+    background-size: cover;
 }
 
 a,
@@ -1097,6 +1101,7 @@ img.alignright,
 
 .site-title a img {
     vertical-align: top;
+    width: 550px;
 }
 
 .header-image .site-title > a {
@@ -1123,6 +1128,10 @@ img.alignright,
     text-indent: -9999px;
 }
 
+.break-on-mobile {
+    display: none;
+}
+
 /* ## Widget Area
 --------------------------------------------- */
 
@@ -1135,9 +1144,17 @@ img.alignright,
 /* # Site Navigation
 ---------------------------------------------------------------------------------------------------- */
 
+.desktop-nav-menu {
+    display: block;
+}
+
+.mobile-nav-menu {
+    display: none;
+}
+
 .genesis-nav-menu {
     clear: both;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 1;
     width: 100%;
 }
@@ -1241,6 +1258,10 @@ img.alignright,
 /* ## Primary Navigation
 --------------------------------------------- */
 
+.nav-primary .wrap {
+    margin-left: 75px;
+}
+
 .nav-primary {
     background-color: #333;
 }
@@ -1254,9 +1275,12 @@ img.alignright,
 }
 
 .nav-primary .genesis-nav-menu a:hover,
-.nav-primary .genesis-nav-menu .current-menu-item > a,
 .nav-primary .genesis-nav-menu .sub-menu .current-menu-item > a:hover {
     color: #e5554e;
+}
+
+.nav-primary .genesis-nav-menu .current-menu-item > a {
+    color: #fff;
 }
 
 /* ## Secondary Navigation
@@ -1289,8 +1313,19 @@ img.alignright,
     color: #ffffff;
 }
 
+#home-featured-trailer {
+    clear: both;
+    text-align: center;
+}
+
 #home-featured-halves2 {
     background: #101E28;
+}
+
+.home-middle-1,
+.home-middle-2,
+.home-middle-3 {
+    text-align: center;
 }
 
 .content h2 {
@@ -1488,7 +1523,7 @@ li.comment {
 ---------------------------------------------------------------------------------------------------- */
 
 .footer-widgets {
-    background-color: #333;
+    background-color: transparent;
     clear: both;
     padding-top: 40px;
 }
@@ -1544,7 +1579,7 @@ li.comment {
 ---------------------------------------------------------------------------------------------------- */
 
 .site-footer {
-    background-color: #fff;
+    background-color: transparent;
     font-size: 16px;
     line-height: 1;
     padding: 40px 0;
@@ -1553,6 +1588,7 @@ li.comment {
 
 .site-footer p {
     margin-bottom: 0;
+    color: white;
 }
 
 /* Responsive Menu
@@ -1622,7 +1658,7 @@ li.comment {
 
     .content,
     .site-header .widget-area {
-        width: 620px;
+        /*width: 620px;*/
     }
 
     .sidebar-content-sidebar .content,
@@ -1634,8 +1670,7 @@ li.comment {
     .footer-widgets-1,
     .footer-widgets-2,
     .footer-widgets-3,
-    .sidebar-primary,
-    .title-area {
+    .sidebar-primary {
         width: 300px;
     }
 
@@ -1646,6 +1681,14 @@ li.comment {
 }
 
 @media only screen and (max-width: 960px) {
+
+    div.responsive-menu-icon ~ div.responsive-menu-icon {
+        display: none !important;
+    }
+
+    .mobile-nav-menu {
+        display: block;
+    }
 
     .site-inner,
     .wrap {
@@ -1673,8 +1716,13 @@ li.comment {
         padding: 20px 5%;
     }
 
+    .site-header .widget-area {
+        text-align: center;
+    }
+
     .header-image .title-area {
         background-position: center top;
+        width: 550px;
     }
 
     .genesis-nav-menu li,
@@ -1855,9 +1903,28 @@ li.comment {
         width: 100%;
     }
 
+    div.widget.simple-social-icons {
+        max-width: 60%;
+        margin: 0 auto;
+    }
+
+    div.widget-area.header-widget-area .button-orange {
+        padding: 10px 5px;
+        font-size: 15px;
+        line-height: 3;
+    }
+
+    div.responsive-menu-icon ~ div.responsive-menu-icon {
+        display: none !important;
+    }
+
 }
 
 @media only screen and (max-width: 568px) {
+
+    .nav-primary .wrap {
+         margin-left: 0;
+    }
 
     .comment-respond input[type="email"],
     .comment-respond input[type="text"],
@@ -1865,4 +1932,79 @@ li.comment {
         width: 100%;
     }
 
+    .break-on-mobile {
+        display: block;
+    }
+
+    aside.one-third {
+        text-align: center;
+    }
+
+}
+
+/* Color Buttons
+------------------------------------------------------------ */
+.button-orange,
+.button-gray {
+    color: #fff;
+    padding: 10px 20px;
+}
+
+div.widget-area.header-widget-area .button-orange {
+    padding: 10px 5px;
+    font-size: 15px;
+}
+
+.button-orange:hover,
+.button-gray:hover {
+    text-decoration: none;
+}
+
+.button-orange {
+    background-color: #FD7903;
+    border: 1px solid #FD7903;
+}
+
+.button-orange:hover {
+    background-color: #E85209;
+    border: 1px solid #E85209;
+    color: #fff;
+}
+.button-gray {
+    background-color: #999999;
+    border: 1px solid #999999;
+}
+
+.button-gray:hover {
+    background-color: #666666;
+    border: 1px solid #666666;
+    color: #fff;
+}
+
+div.button-orange.buy-books-list-item {
+    margin: 5px auto;
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    color: #FD7903;
+    font-weight: 700;
+}
+
+div.button-orange.buy-books-list-item:hover {
+    margin: 5px auto;
+    background: #E85209;
+    border: 1px solid #FD7903;
+    color: #ffffff;
+    font-weight: 700;
+}
+
+
+/*Titles on homepage*/
+
+div.textwidget h2 {
+    color: #ffffff;
+}
+
+div.textwidget h3 {
+    color: #FD7903;
 }
